styles.css
/* ... */
.sidebar-root-group > .sidebar-root-title::-webkit-details-marker { display: none; }
.sidebar-root-group > .sidebar-root-title::marker { content: ""; }
.sidebar-root-group > .sidebar-root-title::before {
  content: "";
  position: absolute;
  left: 0;
  top: 0.5em;
  width: 0;
  height: 0;
  border-left: 3px solid transparent;
  border-right: 3px solid transparent;
  border-top: 5px solid #444;
  transform: rotate(90deg);
  transform-origin: 50% 45%;
  transition: transform 120ms linear;
}
.sidebar-root-group:not([open]) > .sidebar-root-title::before { transform: rotate(0deg); }
.sidebar-root-list { margin: 6px 0 0; padding: 0 0 0 40px; list-style: none; }
.sidebar-level2-item { padding-left: 0; }
.sidebar-level2-item + .sidebar-level2-item { margin-top: 5px; }
.sidebar-level2-link {
  display: block;
  font-family: Calibri, "Segoe UI", Arial, Helvetica, sans-serif;
  font-size: 0.92rem;
  font-weight: 400;
  line-height: 1.5;
  color: inherit;
  text-decoration: none;
  padding-left: 0;
}
.sidebar-subgroup { margin: 0; }
.sidebar-subgroup > summary {
  position: relative;
  margin: 0;
  list-style: none;
  padding-left: 12px;
}
.sidebar-subgroup > summary::-webkit-details-marker { display: none; }
.sidebar-subgroup > summary::marker { content: ""; }
.sidebar-subgroup > summary::before {
  content: "";
  position: absolute;
  left: 0;
  top: 0.5em;
  width: 0;
  height: 0;
  border-left: 3px solid transparent;
  border-right: 3px solid transparent;
  border-top: 5px solid #555;
  transform: rotate(90deg);
  transform-origin: 50% 45%;
  transition: transform 120ms linear;
}
.sidebar-subgroup:not([open]) > summary::before { transform: rotate(0deg); }
.sidebar-level3-list { margin: 3px 0 0; padding: 0 0 0 26px; list-style: none; }
.sidebar-level3-item + .sidebar-level3-item { margin-top: 4px; }
.sidebar-level3-link {
  display: block;
  padding-left: 0;
  font-family: Calibri, "Segoe UI", Arial, Helvetica, sans-serif;
  font-size: 0.88rem;
  font-weight: 400;
  line-height: 1.45;
  color: inherit;
  text-decoration: none;
}
.sidebar-level2-link:hover,
.sidebar-level2-link:focus-visible,
.sidebar-level3-link:hover,
.sidebar-level3-link:focus-visible {
  text-decoration: underline;
  text-underline-offset: 0.14em;
  text-decoration-thickness: 0.07em;
  outline: none;
}


/* Force stronger visual indentation for sidebar hierarchy */
.sidebar .sidebar-root-group > .sidebar-root-list {
  padding-left: 34px;
}

.sidebar .sidebar-root-list > .sidebar-level2-item {
  padding-left: 0;
}

.sidebar .sidebar-root-list > .sidebar-level2-item > .sidebar-level2-link {
  padding-left: 0;
}

.sidebar .sidebar-root-list > .sidebar-level2-item > .sidebar-subgroup > summary {
  padding-left: 13px;
}

.sidebar .sidebar-root-list > .sidebar-level2-item > .sidebar-subgroup > .sidebar-level3-list {
  padding-left: 18px;
}

.sidebar .sidebar-root-list > .sidebar-level2-item > .sidebar-subgroup > .sidebar-level3-list > .sidebar-level3-item > .sidebar-level3-link {
  padding-left: 0;
}


/* Character-based indent alignment: child starts at parent third letter */
.sidebar {
  --nav-arrow-offset: 13px;
  --nav-indent-step: 2ch;
}

.sidebar .sidebar-root-group > .sidebar-root-list {
  padding-left: calc(var(--nav-arrow-offset) + var(--nav-indent-step));
}

.sidebar .sidebar-root-list > .sidebar-level2-item > .sidebar-level2-link {
  padding-left: 0;
}

.sidebar .sidebar-root-list > .sidebar-level2-item > .sidebar-subgroup > summary {
  padding-left: var(--nav-arrow-offset);
}

.sidebar .sidebar-root-list > .sidebar-level2-item > .sidebar-subgroup > .sidebar-level3-list {
  padding-left: calc(var(--nav-arrow-offset) + var(--nav-indent-step));
}


/* Main-content explicit cascade: section/group also follow character-step indent */
.sidebar .sidebar-root-list > .sidebar-level2-item > .sidebar-subgroup {
  margin-left: var(--nav-indent-step);
}

.sidebar .sidebar-root-list > .sidebar-level2-item > .sidebar-subgroup > summary {
  padding-left: var(--nav-arrow-offset);
}

.sidebar .sidebar-root-list > .sidebar-level2-item > .sidebar-subgroup > .sidebar-level3-list {
  margin-left: var(--nav-indent-step);
  padding-left: var(--nav-arrow-offset);
}

